added backend support

--- a/harvesthub-frontend/harvesthub.html
+++ b/harvesthub-frontend/harvesthub.html
@@ -74,8 +74,8 @@
                 <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold leading-tight mb-4">Reaping Fair Rewards: The Direct Path from Farm to Shelf.</h1>
                 <p class="text-lg md:text-xl max-w-3xl mx-auto mb-8">Harvest Hub is a digital platform creating a direct, transparent, and secure connection between farmers and retailers.</p>
                 <div class="flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-4">
-                    <a href="farmer/farmer.html" class="w-full sm:w-auto bg-green-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-green-700 transition-colors">I'm a Farmer</a>
-                    <a href="retailer/retailer.html" class="w-full sm:w-auto bg-white text-green-600 px-8 py-3 rounded-md text-lg font-semibold hover:bg-gray-100 transition-colors">I'm a Retailer</a>
+                    <a href="farmer.html" class="w-full sm:w-auto bg-green-600 text-white px-8 py-3 rounded-md text-lg font-semibold hover:bg-green-700 transition-colors">I'm a Farmer</a>
+                    <a href="retailer.html" class="w-full sm:w-auto bg-white text-green-600 px-8 py-3 rounded-md text-lg font-semibold hover:bg-gray-100 transition-colors">I'm a Retailer</a>
                 </div>
             </div>
         </section>
